ezyplot-x1/force-app/main/default/objects/Planning_application__c/Planning_application__c.object-meta.xml
<CustomObject>
    <label>Planning application</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>