ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Appeal_Decision__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Decision__c</fullName>
    <label>Appeal_Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>