ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Appeal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Status__c</fullName>
    <label>Appeal_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>