ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Application_size__c.field-meta.xml
<CustomField>
    <fullName>Application_size__c</fullName>
    <label>Application size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>