ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_URL__c</fullName>
    <label>Application URL</label>
    <type>Url</type>
</CustomField>