ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Area_retrieval_status__c.field-meta.xml
<CustomField>
    <fullName>Area_retrieval_status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area_retrieval_status</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipName>Planning_permissions</relationshipName>
    <type>Lookup</type>
</CustomField>