ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>