ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Case_Officer__c.field-meta.xml
<CustomField>
    <fullName>Case_Officer__c</fullName>
    <label>Case_Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>