ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOUSING UNITS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>