ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <label>Contact_Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>