ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Contact_Company__c.field-meta.xml
<CustomField>
    <fullName>Contact_Company__c</fullName>
    <label>Contact_Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>