ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Date_Decided__c.field-meta.xml
<CustomField>
    <fullName>Date_Decided__c</fullName>
    <label>Date_Decided</label>
    <type>Date</type>
</CustomField>