ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <label>Date_Received</label>
    <type>Date</type>
</CustomField>