ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Date_Validated__c.field-meta.xml
<CustomField>
    <fullName>Date_Validated__c</fullName>
    <label>Date_Validated</label>
    <type>Date</type>
</CustomField>