ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Decision_Rating__c.field-meta.xml
<CustomField>
    <fullName>Decision_Rating__c</fullName>
    <label>Decision_Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>