ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Decision_Text__c.field-meta.xml
<CustomField>
    <fullName>Decision_Text__c</fullName>
    <label>Decision_Text</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Permitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>