ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>