ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>