ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>