ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>