ezyplot-x1/force-app/main/default/objects/Planning_application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>