ezyplot-x1/force-app/main/default/objects/Planning_application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Authority__c</columns>
    <columns>Reference__c</columns>
    <columns>Category__c</columns>
    <columns>Proposal__c</columns>
    <columns>Application_URL__c</columns>
    <columns>Status__c</columns>
    <columns>Postcode__c</columns>
    <columns>Type__c</columns>
    <columns>Application_size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>